2002-03-18  Dominik Reichardt <gigdr@tesionmail.de>
	* mapedit/gimpwin32.txt: added to provide a small guide for install/usage

2002-03-17 Darke <darkepaw@users.sourceforge.net>
	* mapedit/paledit.[cc,h], mapedit/shapefile.cc, shapes/vgafile.[cc,h],
	tools/ipack.cc, tools/textpack.cc, usecode/ucxt/src/ucxt.cc: fixed
	namespace issues, and casting.

2002-03-16  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/*:  Implemented preferences dialog.
	* shapes/vgafile.cc (Shape_frame): Datalen wasn't set right for
	flats.
	* mapedit/shapelst.cc,etc:  Re-import shapes that have been modified.

2002-03-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* tools/uctools.h: added 32 bit opcodes
	* usecode/*, tools/wud.c: support for 32 bit opcodes and headers
	* tools/wuc.c: support for 32 bit opcodes
	* tools/wuc.c: produce warnings when offsets out of the 16 bit range
	* tools/rip.c: support 32 bit headers

2002-03-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* docs/usecode32.txt: attempt at specs for 32 bit usecode

2002-03-15  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapes/vgafile.{cc,h}:  New methods for constructing, modifying 
	shapes and writing them out.
	* tools/ipack.cc: Use new methods in Shape class for writing.

2002-03-09  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc,Makefile.am: Start using 'exult.cfg' to get paths,
	  and to save/restore window size.

2002-03-08  Ryan Nunn  <triforce@merlin.net.au>
	* audio/xmidi.cc : A MSVCism

2002-03-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* conf/Configuration.cc: only use std::isspace if it isn't a macro

2002-03-08  Max Horn  <max@quendi.de>
	* files/util.*, gumps/gump_util.*: moved newstrdup to files/util.cc
	* audio/xmidi.cc, conf/Configuration.cc, conf/XMLEntity.cc, game.cc,
	  gamemap.h, sigame.cc: fixed namespace issues, added #include cassert, cleanup
	* version.cc: fixed version output for MetroWerks CodeWarrior